# projectile

./: .gitignore  pyproject.toml  requirements.txt
.claude/: launch.json
config/: policy.yaml
src/: app.py  cli.py  pipeline.py
src/agents/: agent_a_intake.py  agent_b_extraction.py  agent_c_vendor.py  agent_d_validation.py  agent_e_matching.py  agent_f_compliance.py  agent_g_anomaly.py  agent_h_exception.py  agent_i_orchestrator.py  base.py
src/schemas/: models.py
src/utils/: file_utils.py  policy.py
test_runs/runs/14f707a3-b7e/: approval_packet.json  audit_log.md  context_packet.json  final_decision.json  match_result.json  metrics.json
test_runs/runs/2bfc8b51-0aa/: approval_packet.json  audit_log.md  context_packet.json  exceptions.md  extracted_invoice.json  final_decision.json  line_items.csv  match_result.json  metrics.json  posting_payload.json  vendor_resolution.json
test_runs/runs/46455751-aa6/: approval_packet.json  audit_log.md  context_packet.json  exceptions.md  extracted_invoice.json  final_decision.json  line_items.csv  match_result.json  metrics.json  vendor_resolution.json
test_runs/runs/4d5ad107-9e4/: approval_packet.json  audit_log.md  compliance_result.json  context_packet.json  exceptions.md  extracted_invoice.json  final_decision.json  line_items.csv  match_result.json  metrics.json  vendor_resolution.json
test_runs/runs/4e92f8ec-152/: approval_packet.json  audit_log.md  compliance_result.json  context_packet.json  exceptions.md  extracted_invoice.json  final_decision.json  line_items.csv  metrics.json  (+3 more)
tests/: test_pipeline.py
(+216 files in other folders)
